--- a/4장.md
+++ b/4장.md
@@ -84,7 +84,7 @@ console.log(score); // 100
 ```
 
 값의 할당은 런타임에 실행되기에 변수가 선언은 되어있지만,  
-할당이 안 되어 있기에 할당문을 기준으로 두 개의 값은 다르게 표시된다.
+할당이 안 되어 있기에 할당문을 기준으로 두 개의 값은 다르게 표시된다
 
 ---
 
