--- a/6장.md
+++ b/6장.md
@@ -7,3 +7,111 @@
 
 > 객체타입  
 > 객체, 함수, 배열등
+
+---
+
+### 숫자타입
+
+자바스크립트는 숫자형이 하나만 존재하며 모든 수를 실수로 처리한다.
+```js
+1 === 1.0 // true
+```
+
+세 가지 특별한 값도 표현할 수 있다.
+`Infinity, -Infinity, NaN`
+```js
+10 / 0 // Infinity
+10 / -0 // -Infinity
+1 * 'string' // NaN
+```
+
+---
+
+### 문자열 타입
+
+문자열은 크게 세 가지 방법으로 표현할 수 있다.
+
+```js
+const string1 = 'hello world!' // 작은 따옴표
+const string2 = "hello world!" // 큰 따옴표
+const string3 = `hello world!` // 백틱
+```
+
+이는 모두 문자열로 평가되며, 따옴표를 붙이는 이유는 키워드와 식별자의 구별을 위해서다.  
+만약 따옴표를 붙이지 않는다면 자바스크립트는 이를 문자열이 아닌 키워드로 인식한다.
+
+```js
+const string = hello world! // error
+```
+
+#### 템플릿 리터럴
+
+템플릿 리터럴은 ES6에 도입 되었으며, 멀티라인 문자열과 표현식 삽입이 가능하다.
+
+
+#### 멀티라인 문자열
+개행문자를 사용하지 않아도 편리한 줄바꿈을 할 수 있게 해준다.
+```js
+const string = `<ul>
+  <li>Hello!</li>
+</ul>`
+/*
+<ul>
+  <li>Hello!</li>
+</ul>
+*/
+```
+
+#### 표현식 삽입
+
+문자열에 간단히 문자열을 삽입할 수 있으며,   
+이 때 표현식이 문자열이 아니더라도 강제 형 변환을 통해 변환되어 삽입된다. 
+
+```js
+const name = 'Tom'
+const string = `my name is ${name}`
+// my name is Tom
+
+const string = `1 + 2 = ${1 + 2}` 
+// 1 + 2 = 3
+```
+
+### boolean 타입
+
+boolean은 참과 거짓을 나타내면 `true / false` 키워드로 작성한다.
+
+### undefined
+
+undefined는 undefined값이 유일하다.
+
+```js
+var foo;
+console.log(foo) // undefined
+```
+undefined는 정의되지 않음을 의미한다. 변수가 초기화되지 않았을 때 undefined라는 값이 할당되어 있기에  
+개발자가 의도적으로 빈 값을 명시해주고 싶을 때는 undefined가 아닌 null을 사용한다.
+
+### null
+
+null타입은 값이 없음을 의도적으로 명시할 때 사용한다.
+
+```js
+const user = {
+  name : 'John',
+  job : null // 직업이 없는 즉, 무직을 나타냄
+}
+```
+
+### 심벌 타입
+
+심벌은 변경 불가능한 원시 타입의 값이며 본인을 제외한 그 어떠한 것과도 일치하지 않는다.  
+호춠시 전달하는 인자는 키 값으로 사용되며 추후에 사용할 때 용도를 알기 위함이다.  
+키 값이 같아도 서로 같은 값은 아니다.
+```js
+const symbol1 =  Symbol('good')
+const symbol2 =  Symbol('good')
+
+console.log(symbol1 === symbol1) // true 
+console.log(symbol1 === symbol2) // false
+```
+
