--- a/7장.md
+++ b/7장.md
@@ -54,3 +54,12 @@ typeof 'Hi' // string
 |--|감소|O|
 |+|어떠한 효과도 없다|X|
 |-|음수를 양수로 양수를 음수로 반전한 값을 반환|X|
+
+### 문자열 연결 연산자
+
+**+연산자는 피연산자 중 하나 이상이 문자열인 경우 문자열 연결 연산자로 동작한다**
+
+```js
+'1' + 2// '12'
+1 + '2'// '12'
+```
