--- a/7장.md
+++ b/7장.md
@@ -63,3 +63,33 @@ typeof 'Hi' // string
 '1' + 2// '12'
 1 + '2'// '12'
 ```
+### 비교 연산자
+
+|연산자|의미|설명|
+|:--:|:--:|:--:|
+|==|동등 비교|값이 같음|
+|===|일치 비교|값과 타입이 같음|
+|!=|부동등 비교|값이 다름|
+|!==|불일치 비교|값과 타입이 다름|
+
+### NaN
+
+NaN은 자신과 일치하지 않는 유일한 값이다.
+```js
+NaN === NaN // false
+```
+
+그래서 NaN을 확인하는 방법으로는 isNaN이 있다
+
+```js
+const a = 1 * 'hello';
+
+isNaN(a) // true
+```
+
+### 삼항 연산자
+```js
+let result = score > 60 ? 'pass' : 'fail';
+```
+
+`score > 60` 이라는 평가식에 따라 `[참] : [거짓]` 으로 평가된다.
