--- a/8장.md
+++ b/8장.md
@@ -7,3 +7,11 @@
 조건문은 주어진 조건식 평가에 따라 코드 블록의 실행을 결정한다.  
 **조건식은 불리언 값으로 평가될 수 있는 표현식이다.**
 
+### 반복문
+
+반복문은 조건식의 평가 결과가 참인 경우 코드 블록을 실행한다.  
+그 후 조건식을 다시 평가하여 여전히 참인 경우 코드 블록을 다시 실행한다.  
+이는 조건식이 거짓일 때까지 반복한다.
+
+### continue문
+continue문은 반복문의 코드 불록 실행을 현 지점에서 중단하고 반복문의 중감식으로 실행 흐름을 이동한다.
