--- a/11장.md
+++ b/11장.md
@@ -1,6 +1,56 @@
 ### 원시값
 
-원시 타입은 변경 불가능한 값이다.  
+**원시 타입은 변경 불가능한 값이다.**
 한 번 생성된 원시 값은 읽기 값으로서 변경할 수 없다.
 
 불변성을 갖는 원시 값을 할당한 변수는 재할당 이외에 변수 값을 변경할 수 있는 방법이 없다.
+
+### 유사 배열 객체
+
+문자열은 유사 배열 객체이면서 이터러블 이므로 배열과 유사하게 각 문자에 접근할 수 있다.
+```js
+let str = 'string';
+
+str[0] // 's'
+str.length // 6
+str.toUpperCase() // 'STRING'
+```
+
+### 값에 의한 전달
+
+```js
+let score = 80;
+let copy = score;
+
+score // 80
+copy // 80
+
+score = 100
+
+score = 100
+copy = 80
+```
+
+변수에 원시 값을 갖는 변수를 할당하면 할당받는 변수에는 할당되는 변수의 원시값이 복사되어 전달되며  
+ 이를 **값에 의한 전달**이라고 한다.
+
+### 객체
+
+**객체는 변경 가능한 값이다.**  
+객체를 할당한 변수가 기억하는 메모리 주소를 통해 메모리 공간에 접근하면 참조 값에 접근할 수 있다.
+
+원시 값은 변경 불가능한 값이므로 원시 값을 갖는 변수의 값을 변경하려면 재할당 이외에는 방법이 없지만,  
+객체는 변경 가능한 값이기에 객체를 할당한 변수는 재할당 없이 객체를 직접 변경할 수 있다.
+
+```js
+let person = {
+    name : 'Lee'
+}
+
+person.name = 'Kim'
+person.age = 25
+
+person // { name : 'Kim' , age : 25 }
+```
+
+
