--- a/12장.md
+++ b/12장.md
@@ -29,3 +29,39 @@ var result = add(3, 5);
 여러번의 코드를 작성하면 실수할 가능성도 높아진다.  
 코드의 중복을 억제하고 재사용성을 높이는 함수는 유지보수와 편의성을 높이고 실수를 줄여 코드의 신뢰성을 높여준다.
 
+### 함수 생성 시점과 함수 호이스팅
+
+```js
+add(1,2) // 3
+sum(1,2) // error
+
+// 함수 선언문
+function add(x, y) {
+    return x + y;
+}
+// 함수 표현식
+var sum = function(x, y) {
+    return x + y;
+}
+```
+
+함수 선언문으로 정의한 함수와 함수 표현식으로 정의한 함수의 생성 시점은 다르다.  
+함수 선언문이 코드의 선두로 끌어 올려진 것처럼 동작하는 자바스크립트 고유의 특징을 함수 호이스팅이라고 한다.  
+반대로, 할당문의 값은 할당문이 실행되는 런타임에 평가되므로 함수 표현식의 함수 리터럴은 할당문이 실행되는 시점에 함수 객체가 된다.
+
+### 고차 함수
+
+함수의 매개변수를 통해 다름 함수의 내부로 전달되는 함수를 콜백함수,  
+매개변수를 통해 함수의 외부에서 콜백 함수를 전달받은 함수를 고차 함수 라고 한다.
+
+```js
+function toString(number) {
+   return String(number)
+}
+
+const arr = [1, 2, 3, 4, 5]
+
+arr.map(toString) // ['1', '2', '3', '4', '5']
+```
+
+위의 코드에서 toString은 콜백 함수, map은 고차 함수이다.
